descarga de modelo de ejemplo

--- a/src/main/resources/templates/modules/productosModule.html
+++ b/src/main/resources/templates/modules/productosModule.html
@@ -21,6 +21,7 @@
 	    		</div>
 	    		<div id="fileHelp" class="form-text">Debe ser un (1) solo archivo en formato CSV.</div>
 	    	</form>
+	    	<a href="/documents/productos.csv" download="productos.csv">Descargar modelo de ejemplo</a>
 		</div>
 	</div>
 </section>
