--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -19,7 +19,7 @@
 				<a class="nav-link" href="/dash/productos">Productos</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="/dash/ventas/">Ventas</a>
+				<a class="nav-link" href="/dash/ventas/" th:href="@{/dash/ventas}">Ventas</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link disabled" href="#">Reportes</a>
