--- a/src/main/resources/templates/modules/ventasModule.html
+++ b/src/main/resources/templates/modules/ventasModule.html
@@ -53,7 +53,7 @@
 							<input type="text" id="productSearch1" class="form-control">							
 						</div>
 						<div class="col-auto">
-							<button type="submit" class="btn btn-outline-primary">Consultar</button>
+							<button type="submit" class="btn btn-outline-primary" th:onclick="searchProduct()">Consultar</button>
 						</div>
 					</div>
 					<div class="row justify-content-md-center mb-2">
@@ -87,9 +87,9 @@
 				</div>
 				<div class="col-auto mx-3">
 					<h4 class="text-center">Vlr. total</h4>
-					<input type="text" readonly class="form-control-plaintext px-2 mb-2 text-center" id="staticProductAmount1" value="0">
-					<input type="text" readonly class="form-control-plaintext px-2 mb-2 text-center" id="staticProductAmount2" value="0">
-					<input type="text" readonly class="form-control-plaintext px-2 mb-2 text-center" id="staticProductAmount3" value="0">
+					<input type="text" readonly class="form-control-plaintext px-2 mb-2 text-center" id="staticProductTotal1" value="0">
+					<input type="text" readonly class="form-control-plaintext px-2 mb-2 text-center" id="staticProductTotal2" value="0">
+					<input type="text" readonly class="form-control-plaintext px-2 mb-2 text-center" id="staticProductTotal3" value="0">
 				</div>			
 			</div>
 			
