--- a/src/main/resources/templates/modules/proveedoresModule.html
+++ b/src/main/resources/templates/modules/proveedoresModule.html
@@ -23,7 +23,6 @@
 				<thead>
 					<tr class="table-light">
 						<th scope="col"></th>
-						<th scope="col">#</th>
 					    <th scope="col">NIT</th>
 					    <th scope="col">Nombre</th>
 					    <th scope="col">Direcci&oacute;n</th>
@@ -36,14 +35,13 @@
 				<tbody>
 					<tr th:each="provider: ${listProviders}">
 						<td><input class="form-check-input" type="checkbox" value="" id="" style="vertical-align: middle;"></td>
-						<td th:text="${provider.id}" style="vertical-align: middle;">Provider ID</td>
 						<td th:text="${provider.nit}" style="vertical-align: middle;">NIT</td>
 						<td th:text="${provider.nombre}" style="vertical-align: middle;">Nombre</td>
 						<td th:text="${provider.direccion}" style="vertical-align: middle;">Direccion</td>
 						<td th:text="${provider.telefono}" style="vertical-align: middle;">Telefono</td>
 						<td th:text="${provider.ciudad}" style="vertical-align: middle;">Ciudad</td>
-						<td><button type="button" class="btn btn-outline-success btn-sm" th:attr="onclick=|editar('${provider.id}', '${provider.nit}', '${provider.nombre}', '${provider.direccion}', '${provider.ciudad}', '${provider.telefono}')|" data-bs-toggle="modal" data-bs-target="#modificarProveedorModal">Modificar</button></td>
-						<td><button type="button" class="btn btn-outline-danger btn-sm delete-btn" th:attr="onclick=|eliminar('${provider.id}')|" data-bs-toggle="modal" data-bs-target="#deleteModal">Eliminar</button></td>
+						<td><button type="button" class="btn btn-outline-success btn-sm" th:attr="onclick=|editar('${provider.nit}', '${provider.nombre}', '${provider.direccion}', '${provider.ciudad}', '${provider.telefono}')|" data-bs-toggle="modal" data-bs-target="#modificarProveedorModal">Modificar</button></td>
+						<td><button type="button" class="btn btn-outline-danger btn-sm delete-btn" th:attr="onclick=|eliminar('${provider.nit}')|" data-bs-toggle="modal" data-bs-target="#deleteModal">Eliminar</button></td>
 					</tr>				
 				</tbody>
 			</table>
