Modificaciones y fixes extras

--- a/src/main/resources/templates/modules/ventasModule.html
+++ b/src/main/resources/templates/modules/ventasModule.html
@@ -94,26 +94,25 @@
 			</div>
 			
 			
-			<div class="row justify-content-end">
-				<div class="col-6 align-self-center">
+			<div class="row justify-content-end" style="max-width: 89%">
+				<div class="col-sm-2 align-self-center">
 					<button type="button" class="btn btn-success align-middle disabled">Confirmar</button>
-				
 				</div>
 				
-				<div class="col mt-2">
-					<div class="row mb-2">
+				<div class="col-4 mt-2">
+					<div class="row justify-content-end mb-1">
 						<label for="staticSubtotal" class="col-auto col-form-label col-form-label-sm">Total venta</label>
 						<div class="col-auto">
 							<input type="text" readonly class="form-control-plaintext form-control-sm px-2 bg-light border" id="staticSubtotal" value="">
 						</div>
 					</div>
-					<div class="row mb-2">
+					<div class="row justify-content-end mb-1">
 						<label for="staticIVA" class="col-auto col-form-label col-form-label-sm">Total IVA</label>
 						<div class="col-auto">
 							<input type="text" readonly class="form-control-plaintext form-control-sm px-2 bg-light border" id="staticIVA" value="">
 						</div>
 					</div>
-					<div class="row mb-2">
+					<div class="row justify-content-end mb-1">
 						<label for="staticTotal" class="col-auto col-form-label col-form-label-sm">Total con IVA</label>
 						<div class="col-auto">
 							<input type="text" readonly class="form-control-plaintext form-control-sm px-2 bg-light border" id="staticTotal" value="">
