--- a/src/main/resources/templates/modules/clientesModule.html
+++ b/src/main/resources/templates/modules/clientesModule.html
@@ -22,7 +22,6 @@
 				<thead>
 					<tr class="table-light">
 						<th scope="col"></th>
-						<th scope="col">#</th>
 					    <th scope="col">C&eacute;dula</th>
 					    <th scope="col">Nombre</th>
 					    <th scope="col">Correo</th>
@@ -35,14 +34,13 @@
 				<tbody class="overflow-auto">
 					<tr th:each="client: ${listClients}">
 						<td><input class="form-check-input" type="checkbox" value="" id="" style="vertical-align: middle;"></td>
-						<td th:text="${client.id}" style="vertical-align: middle;">Client ID</td>
 						<td th:text="${client.cedula}" style="vertical-align: middle;">Cedula</td>
 						<td th:text="${client.nombre}" style="vertical-align: middle;">Nombre</td>
 						<td th:text="${client.email}" style="vertical-align: middle;">Correo</td>
 						<td th:text="${client.direccion}" style="vertical-align: middle;">Direccion</td>
 						<td th:text="${client.telefono}" style="vertical-align: middle;">Telefono</td>
-						<td><button type="button" class="btn btn-outline-success btn-sm" th:attr="onclick=|editar('${client.id}', '${client.cedula}', '${client.nombre}', '${client.email}', '${client.direccion}', '${client.telefono}')|" data-bs-toggle="modal" data-bs-target="#modificarClienteModal">Modificar</button></td>
-						<td><button type="button" class="btn btn-outline-danger btn-sm" th:attr="onclick=|eliminar('${client.id}')|">Eliminar</button></td>
+						<td><button type="button" class="btn btn-outline-success btn-sm" th:attr="onclick=|editar('${client.cedula}', '${client.nombre}', '${client.email}', '${client.direccion}', '${client.telefono}')|" data-bs-toggle="modal" data-bs-target="#modificarClienteModal">Modificar</button></td>
+						<td><button type="button" class="btn btn-outline-danger btn-sm" th:attr="onclick=|eliminar('${client.cedula}')|">Eliminar</button></td>
 					</tr>				
 				</tbody>
 			</table>
