--- a/src/main/resources/templates/modules/productosModule.html
+++ b/src/main/resources/templates/modules/productosModule.html
@@ -8,6 +8,14 @@
 		
 		<div class="mt-3">
 			<div id="missingFileAlertPlaceholder"></div>
+			<div th:if="${param.success}" class="alert alert-success alert-dismissible alert-sm" role="alert">
+				Los productos han sido cargados satisfactoriamente.
+				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+			</div>
+			<div th:if="${param.error}" class="alert alert-danger alert-dismissible alert-sm" role="alert">
+				Lo sentimos, no se pudo cargar los productos. Intenta de nuevo en unos minutos.
+				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+			</div>
 			<form class="form-horizontal" role="form" method="POST" action="/productos/upload" enctype="multipart/form-data">
 			  	<label for="formFile" class="form-label">Subida de archivo con lista de productos</label>
 			  	<div class="row">
@@ -16,12 +24,12 @@
 			  		</div>
 			  		<div class="col-auto">
 			  			<button type="submit" class="btn btn-primary" id="loadFileBtn" th:attr="onclick=|alert('Tienes que seleccionar un archivo para subir', 'danger')|">Cargar archivo</button>
-			  			<input type="reset" class="btn btn-danger" value="Reiniciar" />
+			  			<input type="reset" class="btn btn-outline-secondary" value="Reiniciar" />
 			  		</div>    		
 	    		</div>
 	    		<div id="fileHelp" class="form-text">Debe ser un (1) solo archivo en formato CSV.</div>
 	    	</form>
-	    	<a href="/documents/productos.csv" download="productos.csv">Descargar modelo de ejemplo</a>
+	    	<!-- <a href="/documents/productos.csv" download="productos.csv">Descargar modelo de ejemplo</a> -->
 		</div>
 	</div>
 </section>
