--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -22,7 +22,7 @@
 				<a class="nav-link" href="/dash/ventas/" th:href="@{/dash/ventas}">Ventas</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link disabled" href="#">Reportes</a>
+				<a class="nav-link" href="/dash/reportess" th:href="@{/dash/reportes}">Reportes</a>
 			</li>
 		</ul>
 		<form th:action="@{/logout}" class="form-inline my-2 my-lg-0">
