--- a/src/main/resources/templates/modules/ventasModule.html
+++ b/src/main/resources/templates/modules/ventasModule.html
@@ -7,6 +7,7 @@
 		</div>
 		
 		<div class="mt-3">
+			<span class="visually-hidden" id="cedulaUsuario">[[${#request.userPrincipal.principal.getCedula()}]]</span>
 			<div class="row border p-1">
 				<div class="col p-2 mx-1">
 					<div class="row justify-content-md-center">
@@ -52,24 +53,24 @@
 						<div class="col-auto">
 							<input type="text" id="productSearch1" class="form-control">							
 						</div>
-						<div class="col-auto">
-							<button type="submit" class="btn btn-outline-primary" th:onclick="searchProduct(1)">Consultar</button>
+						<div class="col-auto align-self-center">
+							<button type="submit" class="btn btn-outline-primary btn-sm" th:onclick="searchProduct(1)">Consultar</button>
 						</div>
 					</div>
 					<div class="row justify-content-md-center mb-2">
 						<div class="col-auto">
 							<input type="text" id="productSearch2" class="form-control">							
 						</div>
-						<div class="col-auto">
-							<button type="submit" class="btn btn-outline-primary" th:onclick="searchProduct(2)">Consultar</button>
+						<div class="col-auto align-self-center">
+							<button type="submit" class="btn btn-outline-primary btn-sm" th:onclick="searchProduct(2)">Consultar</button>
 						</div>
 					</div>
 					<div class="row justify-content-md-center mb-2">
 						<div class="col-auto">
 							<input type="text" id="productSearch3" class="form-control">							
 						</div>
-						<div class="col-auto">
-							<button type="submit" class="btn btn-outline-primary" th:onclick="searchProduct(3)">Consultar</button>
+						<div class="col-auto align-self-center">
+							<button type="submit" class="btn btn-outline-primary btn-sm" th:onclick="searchProduct(3)">Consultar</button>
 						</div>
 					</div>
 				</div>
@@ -95,28 +96,33 @@
 			
 			
 			<div class="row justify-content-end" style="max-width: 89%">
-				<div class="col-3 align-self-center">
-					<button type="button" class="btn btn-success align-middle disabled mx-2">Confirmar</button>
-					<button type="button" class="btn btn-outline-secondary align-middle disabled mx-2" id="calculateButton">Calcular</button>
+				<div class="col-auto align-self-center">
+					<div th:if="${param.success}" class="alert alert-success alert-dismissible alert-sm" role="alert">
+						La venta [[${param.order}]] ha sido creada satisfactoriamente.
+						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+					</div>
+				</div>
+				<div class="col-auto align-self-center">
+					<button type="button" class="btn btn-success align-middle disabled mx-2" id="confirmButton" th:onclick="saveOrder()">Confirmar</button>					
 				</div>
 				
 				<div class="col-4 mt-2">
 					<div class="row justify-content-end mb-1">
 						<label for="staticSubtotal" class="col-auto col-form-label col-form-label-sm">Total venta</label>
 						<div class="col-auto">
-							<input type="text" readonly class="form-control-plaintext form-control-sm px-2 bg-light border" id="staticSubtotal" value="">
+							<input type="text" readonly class="form-control-plaintext form-control-sm px-2 bg-light border text-center" id="staticSubtotal" value="">
 						</div>
 					</div>
 					<div class="row justify-content-end mb-1">
 						<label for="staticIVA" class="col-auto col-form-label col-form-label-sm">Total IVA</label>
 						<div class="col-auto">
-							<input type="text" readonly class="form-control-plaintext form-control-sm px-2 bg-light border" id="staticIVA" value="">
+							<input type="text" readonly class="form-control-plaintext form-control-sm px-2 bg-light border text-center" id="staticIVA" value="">
 						</div>
 					</div>
 					<div class="row justify-content-end mb-1">
 						<label for="staticTotal" class="col-auto col-form-label col-form-label-sm">Total con IVA</label>
 						<div class="col-auto">
-							<input type="text" readonly class="form-control-plaintext form-control-sm px-2 bg-light border" id="staticTotal" value="">
+							<input type="text" readonly class="form-control-plaintext form-control-sm px-2 bg-light border text-center" id="staticTotal" value="">
 						</div>
 					</div>
 				
